non_executable_reasons_record_from_random_10k/9143.txt
3.5
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
%%bash

pip install -q cli-pipeline==1.3.7
------------------

[0;36m  File [0;32m"<ipython-input-1-0751cdae80aa>"[0;36m, line [0;32m3[0m
[0;31m    %%bash[0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-0751cdae80aa>, line 3)

Executability                            : False
